-
Bug
-
Resolution: Fixed
-
Medium
-
None
-
None
-
3
-
9223372036854775807
Invalid id range (e.g. the range starts with number) can be accepted by lqa add
# lctl lqa list --fsname test --name tenant1 name: tenant1 ranges: 10001-10002 # lctl lqa add --fsname test --name tenant1 --range 11000a-12000b # lctl lqa list --fsname test --name tenant1 name: tenant1 ranges: 10001-10002, 11000-11000
- has action item
-
EX-12978 Loading...