LU-20456 utils: Reject invalid lqa ranges

Check lqa ranges for invalid characters and reject
them rather than silently accepting them.

Test-Parameters: trivial testlist=sanity-quota
Fixes: bce5cb03fb3b ("LU-18222 quota: add lctl lqa commands")
Signed-off-by: Xiao Yang <xyang@ddn.com>
Change-Id: Ib6fbc5f6e6b9efde9ba5aff687b32020a80af671
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/67114
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Reviewed-by: Sergey Cheremencev <scherementsev@ddn.com>